[package]
name = "chatbix"
version = "0.1.0"
authors = ["Cobrand <cobrandw@gmail.com>"]

[dependencies]
iron = "^0.5"
staticfile = {version = "^0.4", features = ["cache"]}
mount = "^0.3"
router = "^0.5"
bodyparser = "0.6"
urlencoded = "0.5"
persistent = "0.3"

rust-crypto = "^0.2"
rand = "^0.3"

serde = "^0.9"
serde_derive = "^0.9"
serde_json = "^0.9"

error-chain = "^0.9"
dotenv = "^0.8"
chrono = {version = "^0.2", features = ["serde"]}
r2d2 = "^0.7"
r2d2_postgres = "^0.11"
postgres = {version = "0.13", features = ["with-native-tls","with-chrono"]}
